--- a/the-blue-alliance-ios.xcodeproj/xcshareddata/xcschemes/TBA.xcscheme
+++ b/the-blue-alliance-ios.xcodeproj/xcshareddata/xcschemes/TBA.xcscheme
@@ -15,8 +15,22 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "92942D911E2154DA008E79CA"
-               BuildableName = "The Blue Alliance.app"
-               BlueprintName = "The Blue Alliance"
+               BuildableName = "TBA.app"
+               BlueprintName = "TBA"
+               ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "92D6483920BE4CB8008F0DB3"
+               BuildableName = "tba-unit-tests.xctest"
+               BlueprintName = "tba-unit-tests"
                ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -29,24 +43,13 @@
       codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO"
-            testExecutionOrdering = "random">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "92D6483920BE4CB8008F0DB3"
-               BuildableName = "tba-unit-tests.xctest"
-               BlueprintName = "tba-unit-tests"
-               ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "92942D911E2154DA008E79CA"
-            BuildableName = "The Blue Alliance.app"
-            BlueprintName = "The Blue Alliance"
+            BuildableName = "TBA.app"
+            BlueprintName = "TBA"
             ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -54,7 +57,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -68,8 +71,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "92942D911E2154DA008E79CA"
-            BuildableName = "The Blue Alliance.app"
-            BlueprintName = "The Blue Alliance"
+            BuildableName = "TBA.app"
+            BlueprintName = "TBA"
             ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -97,8 +100,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "92942D911E2154DA008E79CA"
-            BuildableName = "The Blue Alliance.app"
-            BlueprintName = "The Blue Alliance"
+            BuildableName = "TBA.app"
+            BlueprintName = "TBA"
             ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
