--- a/the-blue-alliance-ios.xcodeproj/xcshareddata/xcschemes/tba-unit-tests.xcscheme
+++ b/the-blue-alliance-ios.xcodeproj/xcshareddata/xcschemes/tba-unit-tests.xcscheme
@@ -40,6 +40,15 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "92942D911E2154DA008E79CA"
+            BuildableName = "TBA.app"
+            BlueprintName = "TBA"
+            ReferencedContainer = "container:the-blue-alliance-ios.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
